# rust-modbus-frame

./: .gitignore  Cargo.toml  LICENSE  README.md  modbus-frame.code-workspace
benches/: TODO.txt
examples/device_holding_regs/: main.rs
src/: builder.rs  decoder.rs  device.rs  entity.rs  error.rs  exception.rs  frame.rs  function.rs  lib.rs  request.rs  response.rs  view.rs
src/ascii/: encoding.rs  frame.rs  iterator.rs  lrc.rs  mod.rs
src/iter/: registers.rs
src/modbus_traits/: payload.rs
src/request/: mod.rs
src/response/: mod.rs
src/rtu/: crc.rs  device.rs  encoding.rs  frame.rs  iterator.rs  mod.rs  timing.rs  view.rs
src/rtu/defines/: mod.rs
src/rtu/standard/: mod.rs
src/standard/: mod.rs  view.rs
src/transaction/: encapsulated_interface_transport.rs  exception_status.rs  get_comm_event_counter.rs  get_diagnostics.rs  mask_write_register.rs  mod.rs  read_coils.rs  read_discrete_inputs.rs  read_fifo_queue.rs  read_file_record.rs  read_holding_registers.rs  read_input_registers.rs  read_write_multiple_registers.rs  report_id.rs  write_coil.rs  write_file_record.rs  write_holding_register.rs  write_holding_registers.rs  write_multiple_coils.rs  write_multiple_holding_registers.rs  write_multiple_registers.rs
