[package]
name = "modbus-frames"
version = "0.2.0"
authors = ["JC <joshcrawfy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc16 = "0.4"
byteorder = "1"
bitvec = { version = "1", default-features = false }
